# spotify-rec

./: .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: python-test.yml
configs/: config.ini
spotifyRec/: api_funcs.py  config.py  data_funcs.py  genius.py  run.py
tests/: test_config.ini  test_config.py  test_data_funcs.py
