[tool.poetry]
name = "spotifyRec"
version = "0.1.0"
description = ""
authors = ["Josie Park"]
readme = "README.md"
packages = [{include = "spotifyRec"}]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.20.0"
beautifulsoup4 = "^4.11.1"
lyricsgenius = "^3.0.1"
pandas = "^1.5.0"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
